# IMUBundleAdjustment

./: CMakeLists.txt  calib.py  readme.md  test.py
KeyPointDetection/: methods.md
KeyPointDetection/TEST/: ORB  ORB.cpp
KeyPointDetection/Test/: KeyPointDetection.cpp  Video2Image.cpp  Video2Image.py
data/: 20200117_184501.csv  calib.txt
data/20191218_100925/: gen_keypoint.sh  keypoint_10.txt  keypoint_100.txt  keypoint_101.txt  keypoint_102.txt  keypoint_103.txt  keypoint_104.txt  keypoint_105.txt  keypoint_106.txt  keypoint_107.txt  keypoint_108.txt  keypoint_109.txt  keypoint_11.txt  keypoint_110.txt  keypoint_111.txt  keypoint_112.txt  keypoint_113.txt  keypoint_114.txt  keypoint_115.txt  keypoint_116.txt  keypoint_117.txt  keypoint_118.txt  keypoint_119.txt  keypoint_12.txt  keypoint_120.txt  keypoint_121.txt  keypoint_122.txt  keypoint_123.txt  keypoint_124.txt  keypoint_125.txt  keypoint_126.txt  keypoint_127.txt  keypoint_128.txt  keypoint_129.txt  keypoint_13.txt  keypoint_130.txt  keypoint_131.txt  keypoint_132.txt  keypoint_133.txt  keypoint_134.txt  (+208 more)
data/first_test/: keypoint_10.txt  keypoint_100.txt  keypoint_101.txt  keypoint_102.txt  keypoint_103.txt  keypoint_104.txt  keypoint_105.txt  keypoint_106.txt  keypoint_107.txt  keypoint_108.txt  keypoint_109.txt  keypoint_11.txt  keypoint_110.txt  keypoint_111.txt  keypoint_112.txt  keypoint_113.txt  keypoint_114.txt  (+230 more)
output/: bundle_data.txt
src/: BundleAdjuster.cpp  BundleAdjuster.h  BundleAdjustmentIMU.cpp  CameraState.h  IMUIntegration.cpp  IMUIntegration.h  KeypointMatching.cpp  main.cpp
